#95300904 - Include search result total and start parameter in search results