@@ -2,63 +2,56 @@ package ee.hm.dop.rest;
 
 import static org.junit.Assert.assertEquals;
 
-import java.util.List;
-
 import javax.ws.rs.core.GenericType;
 import javax.ws.rs.core.Response;
 
 import org.junit.Test;
 
 import ee.hm.dop.common.test.ResourceIntegrationTestBase;
-import ee.hm.dop.model.Material;
+import ee.hm.dop.model.solr.SearchResult;
 
 public class SearchResourceTest extends ResourceIntegrationTestBase {
 
     private static final int RESULTS_PER_PAGE = 3;
-    
+
     @Test
     public void search() {
         String query = "المدرسية";
         Response response = doGet("search?q=" + query);
-        List<Material> materials = response.readEntity(new GenericType<List<Material>>() {
+        SearchResult searchResult = response.readEntity(new GenericType<SearchResult>() {
         });
 
-        assertEquals(1, materials.size());
-        assertEquals(new Long("3"), materials.get(0).getId());
+        assertEquals(1, searchResult.getMaterials().size());
+        assertEquals(Long.valueOf(3), searchResult.getMaterials().get(0).getId());
+        assertEquals(Long.valueOf(1), Long.valueOf(searchResult.getTotalResults()));
+        assertEquals(Long.valueOf(0), Long.valueOf(searchResult.getStart()));
     }
-    
+
     @Test
     public void searchGetSecondPage() {
         String query = "thishasmanyresults";
         int start = RESULTS_PER_PAGE;
         Response response = doGet("search?q=" + query + "&start=" + start);
-        List<Material> materials = response.readEntity(new GenericType<List<Material>>() {
+        SearchResult searchResult = response.readEntity(new GenericType<SearchResult>() {
         });
-        
-        assertEquals(RESULTS_PER_PAGE, materials.size());
-        
+
+        assertEquals(RESULTS_PER_PAGE, searchResult.getMaterials().size());
         for (int i = 0; i < RESULTS_PER_PAGE; i++) {
-            assertEquals(Long.valueOf(i + start), materials.get(i).getId());
+            assertEquals(Long.valueOf(i + start), searchResult.getMaterials().get(i).getId());
         }
+        assertEquals(Long.valueOf(RESULTS_PER_PAGE), Long.valueOf(searchResult.getTotalResults()));
+        assertEquals(Long.valueOf(start), Long.valueOf(searchResult.getStart()));
+
     }
 
     @Test
     public void searchNoResult() {
         String query = "no+results";
         Response response = doGet("search?q=" + query);
-        List<Material> materials = response.readEntity(new GenericType<List<Material>>() {
+        SearchResult searchResult = response.readEntity(new GenericType<SearchResult>() {
         });
 
-        assertEquals(0, materials.size());
+        assertEquals(0, searchResult.getMaterials().size());
     }
-    
-    @Test
-    public void countResults() {
-        String query = "thishasmanyresults";
-        Response response = doGet("search/countResults?q=" + query);
-        long result = response.readEntity(new GenericType<Long>() {
-        });
 
-        assertEquals(8, result);
-    }
 }
